added sample responses to the swagger
