# src/controllers/authControllers.js
@@ -3,6 +3,24 @@ const { createToken } = require("../utils/tokens")
 
 
 module.exports.signup_post = async (req, res) => {
+       /*  #swagger.parameters['body'] = {
+            in: 'body',
+            description: 'Add new user.',
+            schema: {
+                $username: 'boboye66',
+                $password: '#Strongpassword321'
+                
+            }
+    } */
+              /* #swagger.responses[200] = {
+            description: 'Username, status and token.',
+            schema: {
+                status: 200,
+                username: 'boboye66',
+                accessToken: 'access_token'
+            }
+    } */
+    // #swagger.description = 'Endpoint to register as a new user using username and password. Usernames must be unique. Passwords must meet criteria of at least one upper case character, at least one lower case character, at least one numerical character, at least one symbol and must be at least 8 characters long'
     try {
         const { username } = req.body
         const hashedPassword = req.hashedPassword
@@ -19,6 +37,23 @@ module.exports.signup_post = async (req, res) => {
 }
 
 module.exports.login_post = async (req, res) => {
+           /*  #swagger.parameters['body'] = {
+            in: 'body',
+            description: 'Login as existing user.',
+            schema: {
+                $username: 'boboye66',
+                $password: '#Strongpassword321'               
+            }
+    } */
+          /* #swagger.responses[200] = {
+            description: 'Username, status and token.',
+            schema: {
+                status: 200,
+                username: 'boboye66',
+                accessToken: 'access_token'
+            }
+    } */
+    // #swagger.description = 'Endpoint for users to login using username and password'
     try {
         const user = req.user
         const accessToken = createToken(user._id)
